# tilt-app

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  WORKTREES.md  docker-compose.prod.yml  docker-compose.yml  init_progress.txt  justfile
.cargo/: config.toml
.claude/: settings.json
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml
.windsurf/: hooks.json
.windsurf/rules/: tech-stack.md
.windsurf/workflows/: ralph-cycle.md
client/: Cargo.toml  tilt-client.service
client/src/: main.rs  scanner.rs
esp32-client/: Cargo.toml  IMPLEMENTATION_GUIDE.md  Makefile  README.md  build.rs  cfg.toml.example  espflash.toml  partitions.csv  sdkconfig.defaults  sdkconfig.partitions  test-host.sh
esp32-client/.cargo/: config.toml
esp32-client/src/: ble.rs  buffer.rs  config.rs  http.rs  main.rs  ota.rs  tilt.rs  wifi.rs
server/: Cargo.toml  Dockerfile  Rocket.toml
server/migration/src/: lib.rs  m20260301_000001_create_alert_targets.rs  m20260301_000002_create_alert_rules.rs  m20260316_000001_create_brew_events.rs  m20260316_000002_add_window_hours_to_alert_rules.rs  m20260317_071445_drop_abv_from_brews.rs  m20260402_005912_add_nutrient_schedule_fields_to_brews.rs  m20260402_012232_add_yeast_strain_to_brews.rs  m20260402_014416_create_nutrient_tables.rs  m20260402_022608_add_nutrient_alert_target_to_brews.rs  (+2 more)
server/src/: auth_mode.rs  lib.rs  main.rs  oidc.rs
shared/: Cargo.toml
shared/src/: lib.rs
web/: package-lock.json  package.json
web/src/: App.tsx
(+85 files in other folders)
