[package]
name = "esp32-client"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "esp32-client"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp32-nimble = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
heapless = "0.8"

[build-dependencies]
embuild = "0.33"
